{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 24,
  "lineage": "636b865e-e59a-30ec-c7da-06f72cf4f2c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_poller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0efe89759aa766662",
            "arn": "arn:aws:ec2:ap-south-1:453914763342:instance/i-01a2c5bad18dfe306",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sensor-kpi-ap-ec2-poller-profile",
            "id": "i-01a2c5bad18dfe306",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "sensor-kpi-ap-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c08b2a801aa1399",
            "private_dns": "ip-172-31-14-137.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.137",
            "public_dns": "ec2-15-252-106-220.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.252.106.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:453914763342:key/985ea9e1-f788-44ea-ae18-a68ebb781cee",
                "throughput": 125,
                "volume_id": "vol-05d081ec08711797a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sensor-kpi-ap-ec2-poller-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069eb95dce0a52ed0",
            "tags": {
              "Environment": "prod",
              "Name": "sensor-kpi-ap-ec2-poller",
              "Project": "sensor-kpi-pipeline"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sensor-kpi-ap-ec2-poller",
              "Project": "sensor-kpi-pipeline"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6f9b9a2fa4d9ed4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_poller",
            "aws_iam_role.ec2_poller",
            "aws_key_pair.ec2_poller",
            "aws_security_group.ec2_poller",
            "data.aws_ami.al2023",
            "tls_private_key.ec2_poller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_poller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:453914763342:security-group/sg-0a6f9b9a2fa4d9ed4",
            "description": "No inbound rules -- access via SSM Session Manager only.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound (S3, SQS, SNS, SSM endpoints)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6f9b9a2fa4d9ed4",
            "ingress": [
              {
                "cidr_blocks": [
                  "223.233.80.157/32"
                ],
                "description": "SSH access from the configured administrator IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sensor-kpi-ap-ec2-poller-sg",
            "name_prefix": "",
            "owner_id": "453914763342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Project": "sensor-kpi-pipeline"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "sensor-kpi-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df0b58b8d9e315f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "223.233.80.157/32"
            ],
            "description": "SSH access from the configured administrator IP",
            "from_port": 22,
            "id": "sgrule-2914673057",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a6f9b9a2fa4d9ed4",
            "security_group_rule_id": "sgr-036a5f681d7562cd6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_poller"
          ]
        }
      ]
    }
  ]
}